[gd_scene load_steps=3 format=3 uid="uid://douvf8lvbm2kw"]

[ext_resource type="Script" path="res://client.gd" id="1_werre"]
[ext_resource type="FontFile" uid="uid://rumvk3huqa2f" path="res://art/brackeys_platformer_assets/fonts/PixelOperator8-Bold.ttf" id="2_p44ky"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_werre")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 736.0
offset_top = 48.0
offset_right = 1144.0
offset_bottom = 160.0

[node name="UserAccountLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 32.0
offset_right = 190.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("2_p44ky")
text = "user Account"

[node name="UserAccountText" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 208.0
offset_top = 32.0
offset_right = 390.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("2_p44ky")
text = "user account"

[node name="DisplayName" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 56.0
offset_right = 186.0
offset_bottom = 79.0
theme_override_fonts/font = ExtResource("2_p44ky")
text = "Display Name"

[node name="DisplayNameText" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 208.0
offset_top = 56.0
offset_right = 390.0
offset_bottom = 79.0
theme_override_fonts/font = ExtResource("2_p44ky")
text = "user account"

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 40.0
offset_right = 624.0
offset_bottom = 216.0

[node name="Label" type="Label" parent="Panel2"]
layout_mode = 0
offset_left = 32.0
offset_top = 24.0
offset_right = 75.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("2_p44ky")
text = "Email"

[node name="Label2" type="Label" parent="Panel2"]
layout_mode = 0
offset_left = 32.0
offset_top = 64.0
offset_right = 75.0
offset_bottom = 88.0
theme_override_fonts/font = ExtResource("2_p44ky")
text = "Password"

[node name="EmailInput" type="LineEdit" parent="Panel2"]
layout_mode = 0
offset_left = 172.0
offset_top = 16.0
offset_right = 372.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("2_p44ky")

[node name="PasswordInput" type="LineEdit" parent="Panel2"]
layout_mode = 0
offset_left = 172.0
offset_top = 64.0
offset_right = 372.0
offset_bottom = 95.0
theme_override_fonts/font = ExtResource("2_p44ky")

[node name="LoginButton" type="Button" parent="Panel2"]
layout_mode = 0
offset_left = 256.0
offset_top = 120.0
offset_right = 356.0
offset_bottom = 151.0
theme_override_fonts/font = ExtResource("2_p44ky")
text = "Submit"

[node name="Panel3" type="Panel" parent="."]
layout_mode = 0
offset_left = 184.0
offset_top = 320.0
offset_right = 544.0
offset_bottom = 536.0

[node name="StoreData" type="Button" parent="Panel3"]
layout_mode = 0
offset_left = 32.0
offset_top = 24.0
offset_right = 328.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("2_p44ky")
text = "Store Data"

[node name="GetData" type="Button" parent="Panel3"]
layout_mode = 0
offset_left = 32.0
offset_top = 77.0
offset_right = 328.0
offset_bottom = 133.0
theme_override_fonts/font = ExtResource("2_p44ky")
text = "Get Data from Store"

[node name="ListData" type="Button" parent="Panel3"]
layout_mode = 0
offset_left = 32.0
offset_top = 136.0
offset_right = 312.0
offset_bottom = 192.0
theme_override_fonts/font = ExtResource("2_p44ky")
text = "List Data from Store"

[connection signal="button_down" from="Panel2/LoginButton" to="." method="_on_login_button_button_down"]
[connection signal="button_down" from="Panel3/StoreData" to="." method="_on_store_data_button_down"]
[connection signal="button_down" from="Panel3/GetData" to="." method="_on_get_data_button_down"]
[connection signal="button_down" from="Panel3/ListData" to="." method="_on_list_data_button_down"]
